# Kaggle

./: README.md
SpaceshipTitanic/: pyproject.toml  random_forest.ipynb
SpaceshipTitanic/Data/: predictions.csv
