[tool.poetry]
name = "spaceshiptitanic"
version = "0.1.0"
description = ""
authors = ["NxNiki <michaelniki1988@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.0"
numpy = "^1.2"
scikit-learn = "^1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
